phase0/deploy/k8s/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/managed-by: beck
    app.kubernetes.io/name: beck-todo
  name: beck-todo
