phase0/deploy/k8s/40-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/managed-by: beck
    app.kubernetes.io/name: beck-todo
  name: beck-todo
  namespace: beck-todo
spec:
  hostnames:
    - todo.beck.localhost
  parentRefs:
    - name: beck-gateway
      namespace: gateway-system
  rules:
    - backendRefs:
        - name: beck-todo
          port: 80
      matches:
        - path:
            type: Exact
            value: /socket
      timeouts:
        request: 0s
    - backendRefs:
        - name: beck-todo
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
