phase0/deploy/k8s/50-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    beck.dev/derived-from: net.out(dns), net.out(log), merge_clients()
  labels:
    app.kubernetes.io/managed-by: beck
    app.kubernetes.io/name: beck-todo
  name: beck-todo
  namespace: beck-todo
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - ports:
        - port: 5432
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: beck-todo
          podSelector:
            matchLabels:
              app.kubernetes.io/name: beck-postgres
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gateway-system
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/managed-by: beck
      app.kubernetes.io/name: beck-todo
  policyTypes:
    - Ingress
    - Egress
